feat: migrate to ng

--- a/ng-christmas-calendar/src/index.html
+++ b/ng-christmas-calendar/src/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
   <app-root></app-root>
+  <footer>
+    <div><span class="footer-info">i</span>
+      <div>Follow me on Twitter: <a href="https://twitter.com/FullStackMaker" target="_blank">@FullStackMaker</a></div>
+    </div>
+  </footer>
 </body>
 </html>
