--- a/ng-christmas-calendar/src/index.html
+++ b/ng-christmas-calendar/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <xmas-root></xmas-root>
   <footer>
     <div><span class="footer-info">i</span>
       <div>Follow me on Twitter: <a href="https://twitter.com/FullStackMaker" target="_blank">@FullStackMaker</a></div>
