feat: add snow flakes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <script defer data-domain="csschristmascalendar.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
+  <span class="snow"></span>
+
+  <button type="button" id="let-it-snow" class="button button--action" aria-pressed="false">Let it snow</button>
 
   <div class="calendar-grid">
     <div class="title">
@@ -1335,5 +1338,7 @@
       <div>Follow me on Twitter: <a href="https://twitter.com/FullStackMaker" target="_blank">@FullStackMaker</a></div>
     </div>
   </footer>
+
+  <script src="./snowflakes.js"></script>
 </body>
 </html>
