--- a/ng-christmas-calendar/src/index.html
+++ b/ng-christmas-calendar/src/index.html
@@ -5,6 +5,33 @@
   <title>Angular Christmas Calendar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="title" content="Angular Christmas Calendar" />
+  <meta name="description" content="The Angular Christmas Calendar website - 24 guests will share their personal insights on Angular as seen in 2023" />
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="http://angularchristmascalendar.com" />
+      <meta property="og:title" content="Angular Christmas Calendar" />
+      <meta
+        property="og:description"
+        content="The Angular Christmas Calendar website - 24 guests will share their personal insights on Angular as seen in 2023."
+      />
+      <!-- TODO: define image -->
+      <!-- <meta property="og:image" content="" /> -->
+  
+      <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:url" content="http://angularchristmascalendar.com" />
+      <meta property="twitter:title" content="Angular Christmas Calendar" />
+      <meta
+        property="twitter:description"
+        content="The Angular Christmas Calendar website - 24 guests will share their personal insights on Angular as seen in 2023."
+      />
+      <!-- TODO: define image -->
+      <!-- <meta property="twitter:image" content="" /> -->
+  
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
