fix: add back footer

--- a/ng-christmas-calendar/src/index.html
+++ b/ng-christmas-calendar/src/index.html
@@ -12,5 +12,11 @@
 </head>
 <body>
   <xmas-root></xmas-root>
+
+  <footer>
+    <div><span class="footer-info">i</span>
+      <div>Follow me on Twitter: <a href="https://twitter.com/FullStackMaker" target="_blank">@FullStackMaker</a></div>
+    </div>
+  </footer>
 </body>
 </html>
