--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         bottom: 0;
       "
     >
-      <div style="display: flex; align-items: center">
+      <div style="display: flex; align-items: center; flex-direction: column">
         <!-- Logos can be added here -->
         <p style="margin-bottom: 4px">
           <img
