feat: test deploy

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
       property="og:description"
       content="The Angular Christmas Calendar website - 24 guests will share their personal insights on Angular as seen in 2023."
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://angularchristmascalendar.com/assets/images/angular-christmas-calendar.png"
-    />
+    /> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -33,10 +33,10 @@
       property="twitter:description"
       content="The Angular Christmas Calendar website - 24 guests will share their personal insights on Angular as seen in 2023."
     />
-    <meta
+    <!-- <meta
       property="twitter:image"
       content="https://angularchristmascalendar.com/assets/images/angular-christmas-calendar.png"
-    />
+    /> -->
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
