--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,15 @@
         </p>
         <p style="margin-bottom: 4px">
           <img
+            src="https://www.drupal.org/files/styles/grid-4-2x/public/Packt%20Logo1_0.png?itok=p5jrImHT"
+            alt="Angular Space"
+            style="margin-right: 15px; opacity: 0.8"
+            width="132"
+            height="44"
+          />
+        </p>
+        <p style="margin-bottom: 4px">
+          <img
             src="./assets/content/images/angular-space-footer.png"
             alt="Angular Space"
             style="margin-right: 15px; opacity: 0.8"
