--- a/src/index.html
+++ b/src/index.html
@@ -52,12 +52,13 @@
 
     <!-- Footer -->
     <footer>
-      <div>
+      <div class="logos">
         <!-- Logos can be added here -->
         <p style="margin-bottom: 4px">
           <img
-            src="./assets/content/images/angular-bros.png"
+            ngSrc="./assets/content/images/angular-bros.png"
             alt="Angular Bros"
+            loading="lazy"
             style="margin-right: 15px; opacity: 0.8"
             width="132"
             height="44"
@@ -65,8 +66,9 @@
         </p>
         <p style="margin-bottom: 4px">
           <img
-            src="https://www.drupal.org/files/styles/grid-4-2x/public/Packt%20Logo1_0.png?itok=p5jrImHT"
+            ngSrc="https://www.drupal.org/files/styles/grid-4-2x/public/Packt%20Logo1_0.png?itok=p5jrImHT"
             alt="Angular Space"
+            loading="lazy"
             style="margin-right: 15px; opacity: 0.8"
             width="132"
             height="44"
@@ -74,8 +76,9 @@
         </p>
         <p style="margin-bottom: 4px">
           <img
-            src="./assets/content/images/angular-space-footer.png"
+            ngSrc="./assets/content/images/angular-space-footer.png"
             alt="Angular Space"
+            loading="lazy"
             style="margin-right: 15px; opacity: 0.8"
             width="132"
             height="44"
