fix after code review

--- a/src/index.html
+++ b/src/index.html
@@ -52,13 +52,12 @@
 
     <!-- Footer -->
     <footer>
-      <div class="logos">
+      <div>
         <!-- Logos can be added here -->
         <p style="margin-bottom: 4px">
           <img
-            ngSrc="./assets/content/images/angular-bros.png"
+            src="./assets/content/images/angular-bros.png"
             alt="Angular Bros"
-            loading="lazy"
             style="margin-right: 15px; opacity: 0.8"
             width="132"
             height="44"
@@ -66,9 +65,8 @@
         </p>
         <p style="margin-bottom: 4px">
           <img
-            ngSrc="https://www.drupal.org/files/styles/grid-4-2x/public/Packt%20Logo1_0.png?itok=p5jrImHT"
+            src="https://www.drupal.org/files/styles/grid-4-2x/public/Packt%20Logo1_0.png?itok=p5jrImHT"
             alt="Angular Space"
-            loading="lazy"
             style="margin-right: 15px; opacity: 0.8"
             width="132"
             height="44"
@@ -76,9 +74,8 @@
         </p>
         <p style="margin-bottom: 4px">
           <img
-            ngSrc="./assets/content/images/angular-space-footer.png"
+            src="./assets/content/images/angular-space-footer.png"
             alt="Angular Space"
-            loading="lazy"
             style="margin-right: 15px; opacity: 0.8"
             width="132"
             height="44"
