refactor: update the packt logo

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,8 @@
         </p>
         <p style="margin-bottom: 4px">
           <img
-            src="https://www.drupal.org/files/styles/grid-4-2x/public/Packt%20Logo1_0.png?itok=p5jrImHT"
-            alt="Angular Space"
+            src="content/images/packt.svg"
+            alt="Pakt"
             style="margin-right: 15px; opacity: 0.8"
             width="132"
             height="44"
