refactor: update .prettierrc.json & format repo

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,7 @@
       property="og:description"
       content="The Angular Christmas Calendar website - 24 guests will share their personal insights on Angular as seen in 2024."
     />
-    <meta
-      property="og:image"
-      content="https://angularchristmascalendar.com/content/images/angular-christmas-calendar.png"
-    />
+    <meta property="og:image" content="https://angularchristmascalendar.com/content/images/angular-christmas-calendar.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -33,18 +30,12 @@
       property="twitter:description"
       content="The Angular Christmas Calendar website - 24 guests will share their personal insights on Angular as seen in 2024."
     />
-    <meta
-      property="twitter:image"
-      content="https://angularchristmascalendar.com/content/images/angular-christmas-calendar.png"
-    />
+    <meta property="twitter:image" content="https://angularchristmascalendar.com/content/images/angular-christmas-calendar.png" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet" />
     <script defer data-domain="angularchristmascalendar.com" src="https://plausible.io/js/script.js"></script>
   </head>
 
@@ -67,13 +58,7 @@
           </a>
         </p>
         <p style="margin-bottom: 4px">
-          <img
-            src="content/images/packt.svg"
-            alt="Pakt"
-            style="margin-right: 15px; opacity: 0.8"
-            width="132"
-            height="44"
-          />
+          <img src="content/images/packt.svg" alt="Pakt" style="margin-right: 15px; opacity: 0.8" width="132" height="44" />
         </p>
         <p style="margin-bottom: 4px">
           <a href="https://angular-university.io/?ref=angularchristmascalendar.com" target="_blank">
