--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet" />
+
+    <link rel="preload" href="content/images/angular_wordmark_gradient.png" as="image" />
+
     <meta name="title" content="Angular Christmas Calendar" />
     <meta
       name="description"
@@ -37,8 +41,6 @@
     <meta property="twitter:image" content="https://angularchristmascalendar.com/content/images/angular-christmas-calendar.png" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet" />
     <script defer data-domain="angularchristmascalendar.com" src="https://plausible.io/js/script.js"></script>
   </head>
 
