--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap"
       rel="stylesheet"
     />
+    <script defer data-domain="angularchristmascalendar.com" src="https://plausible.io/js/script.js"></script>
   </head>
 
   <body>
@@ -73,13 +74,15 @@
           />
         </p>
         <p style="margin-bottom: 4px">
-          <img
-            src="./assets/content/images/angular-space-footer.png"
-            alt="Angular Space"
-            style="margin-right: 15px; opacity: 0.8"
-            width="132"
-            height="44"
-          />
+          <a href="https://angular-university.io/?ref=angularchristmascalendar.com" target="_blank">
+            <img
+              src="./assets/content/images/angular-university-banner-41.jpg"
+              alt="Angular University"
+              style="margin-right: 15px; opacity: 0.9"
+              width="300"
+              height="70"
+            />
+          </a>
         </p>
         <!-- Add more as needed -->
       </div>
@@ -87,26 +90,53 @@
         <div style="display: block; margin-bottom: 10px">
           <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
             <strong>Project Founded and Directed by:</strong>
-            Daniel Glejzner (Angular Bros)
+            Daniel Glejzner (Angular Bros) 
+            <a href="https://x.com/danielglejzner" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+              <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+              </svg>
+            </a>
           </span>
           <span style="color: #444; font-size: 14px; display: block">
             <strong>Project Lead:</strong>
             Paweł Kubiak (Angular Bros)
+            <a href="https://x.com/pawelkubiakdev" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+              <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+              </svg>
+            </a>
           </span>
         </div>
-      </div>
-      <div style="color: #666; text-align: center; font-size: 14px">
-        <div style="display: block">
-          <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
-            <strong>Development Team:</strong>
-            Paweł Kubiak, Ilir Beqiri, Daniel Glejzner
-          </span>
-          <span style="color: #444; font-size: 14px">
-            <strong>Original Design by:</strong>
-            Johnny Fekete
-          </span>
         </div>
-      </div>
+        <div style="color: #666; text-align: center; font-size: 14px">
+          <div style="display: block">
+            <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
+              <strong>Development Team:</strong>
+              Paweł Kubiak
+              <a href="https://x.com/pawelkubiakdev" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+                <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                  <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                </svg>
+              </a>, 
+              Ilir Beqiri
+              <a href="https://x.com/lilbeqiri" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+                <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                  <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                </svg>
+              </a>, 
+              Daniel Glejzner
+              <a href="https://x.com/danielglejzner" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+                <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                  <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                </svg>
+              </a>
+            </span>
+            <span style="color: #444; font-size: 14px">
+              <strong>Original Design by:</strong>
+              Johnny Fekete
+            </span>
+          </div>
+        </div>
     </footer>
   </body>
 </html>
