feat: add angular space links

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
       <div>
         <!-- Logos can be added here -->
         <p style="margin-bottom: 4px">
+          <a href="https://angularspace.com/?ref=angularchristmascalendar.com" target="_blank">
           <img
             src="./assets/content/images/angular-bros.png"
             alt="Angular Bros"
@@ -63,6 +64,7 @@
             width="132"
             height="44"
           />
+          </a>
         </p>
         <p style="margin-bottom: 4px">
           <img
