--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 
     <!-- Footer -->
     <footer>
-      <div>
+      <div class="footer-container">
         <!-- Logos can be added here -->
         <p style="margin-bottom: 4px">
           <a href="https://angularspace.com/?ref=angularchristmascalendar.com" target="_blank">
