refactor: move angular university to the correct place

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
         <p style="margin-bottom: 4px">
           <a href="https://angular-university.io/?ref=angularchristmascalendar.com" target="_blank">
             <img
-              src="./assets/content/images/angular-university-banner-41.jpg"
+              src="content/images/angular-university-banner-41.jpg"
               alt="Angular University"
               style="margin-right: 15px; opacity: 0.9"
               width="300"
