refactor: format repo

--- a/src/index.html
+++ b/src/index.html
@@ -53,13 +53,13 @@
         <!-- Logos can be added here -->
         <p style="margin-bottom: 4px">
           <a href="https://angularspace.com/?ref=angularchristmascalendar.com" target="_blank">
-          <img
-            src="content/images/angular-bros.png"
-            alt="Angular Bros"
-            style="margin-right: 15px; opacity: 0.8"
-            width="132"
-            height="44"
-          />
+            <img
+              src="content/images/angular-bros.png"
+              alt="Angular Bros"
+              style="margin-right: 15px; opacity: 0.8"
+              width="132"
+              height="44"
+            />
           </a>
         </p>
         <p style="margin-bottom: 4px">
@@ -82,10 +82,13 @@
         <div style="display: block; margin-bottom: 10px">
           <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
             <strong>Project Founded and Directed by:</strong>
-            Daniel Glejzner (Angular Bros) 
+            Daniel Glejzner (Angular Bros)
             <a href="https://x.com/danielglejzner" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
               <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
-                <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                <path
+                  fill="currentColor"
+                  d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+                />
               </svg>
             </a>
           </span>
@@ -94,41 +97,51 @@
             Paweł Kubiak (Angular Bros)
             <a href="https://x.com/pawelkubiakdev" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
               <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
-                <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                <path
+                  fill="currentColor"
+                  d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+                />
               </svg>
             </a>
           </span>
         </div>
+      </div>
+      <div style="color: #666; text-align: center; font-size: 14px">
+        <div style="display: block">
+          <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
+            <strong>Development Team:</strong>
+            Paweł Kubiak
+            <a href="https://x.com/pawelkubiakdev" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+              <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                <path
+                  fill="currentColor"
+                  d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+                />
+              </svg> </a
+            >, Ilir Beqiri
+            <a href="https://x.com/lilbeqiri" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+              <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                <path
+                  fill="currentColor"
+                  d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+                />
+              </svg> </a
+            >, Daniel Glejzner
+            <a href="https://x.com/danielglejzner" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+              <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
+                <path
+                  fill="currentColor"
+                  d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+                />
+              </svg>
+            </a>
+          </span>
+          <span style="color: #444; font-size: 14px">
+            <strong>Original Design by:</strong>
+            Johnny Fekete
+          </span>
         </div>
-        <div style="color: #666; text-align: center; font-size: 14px">
-          <div style="display: block">
-            <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
-              <strong>Development Team:</strong>
-              Paweł Kubiak
-              <a href="https://x.com/pawelkubiakdev" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
-                <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
-                  <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                </svg>
-              </a>, 
-              Ilir Beqiri
-              <a href="https://x.com/lilbeqiri" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
-                <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
-                  <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                </svg>
-              </a>, 
-              Daniel Glejzner
-              <a href="https://x.com/danielglejzner" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
-                <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
-                  <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                </svg>
-              </a>
-            </span>
-            <span style="color: #444; font-size: 14px">
-              <strong>Original Design by:</strong>
-              Johnny Fekete
-            </span>
-          </div>
-        </div>
+      </div>
     </footer>
   </body>
 </html>
