fix: set aria-label on svg links

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,13 @@
           <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
             <strong>Project Founded and Directed by:</strong>
             Daniel Glejzner (Angular Bros)
-            <a href="https://x.com/danielglejzner" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+            <a
+              href="https://x.com/danielglejzner"
+              aria-label="Daniel Glejzner account on X"
+              target="_blank"
+              rel="nofollow"
+              style="color: #444; text-decoration: none"
+            >
               <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
                 <path
                   fill="currentColor"
@@ -94,7 +100,13 @@
           <span style="color: #444; font-size: 14px; display: block">
             <strong>Project Lead:</strong>
             Paweł Kubiak (Angular Bros)
-            <a href="https://x.com/pawelkubiakdev" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+            <a
+              href="https://x.com/pawelkubiakdev"
+              aria-label="Paweł Kubiak account on X"
+              target="_blank"
+              rel="nofollow"
+              style="color: #444; text-decoration: none"
+            >
               <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
                 <path
                   fill="currentColor"
@@ -110,7 +122,13 @@
           <span style="color: #444; font-size: 14px; margin-bottom: 4px; display: block">
             <strong>Development Team:</strong>
             Paweł Kubiak
-            <a href="https://x.com/pawelkubiakdev" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+            <a
+              href="https://x.com/pawelkubiakdev"
+              aria-label="Paweł Kubiak account on X"
+              target="_blank"
+              rel="nofollow"
+              style="color: #444; text-decoration: none"
+            >
               <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
                 <path
                   fill="currentColor"
@@ -118,7 +136,13 @@
                 />
               </svg> </a
             >, Ilir Beqiri
-            <a href="https://x.com/lilbeqiri" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+            <a
+              href="https://x.com/lilbeqiri"
+              aria-label="Ilir Beqiri account on X"
+              target="_blank"
+              rel="nofollow"
+              style="color: #444; text-decoration: none"
+            >
               <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
                 <path
                   fill="currentColor"
@@ -126,7 +150,13 @@
                 />
               </svg> </a
             >, Daniel Glejzner
-            <a href="https://x.com/danielglejzner" target="_blank" rel="nofollow" style="color: #444; text-decoration: none">
+            <a
+              href="https://x.com/danielglejzner"
+              aria-label="Daniel Glejzner account on X"
+              target="_blank"
+              rel="nofollow"
+              style="color: #444; text-decoration: none"
+            >
               <svg viewBox="0 0 24 24" width="14" height="14" style="display: inline-block; vertical-align: middle; margin-left: 4px">
                 <path
                   fill="currentColor"
